# SCHNApps

./: .travis.yml
schnapps/core/: map_handler.cpp  map_handler.h  types.h
schnapps/plugins/import/: import.cpp  import.h
schnapps/plugins/point_set_render/: CMakeLists.txt  dll.h  map_parameters.h  point_set_render.h
